# Anns_and_GeneticProgramming

./: CMakeLists.txt  README.md  main.cpp
Tests/: LogicGatesTest.cpp  NeuronTest.cpp
src/: Neuron.h
src/LogicsGates/: And.h  NAnd.h  Not.h  Or.h
